--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Title</title>
   </head>
-  <body></body>
+  <body>
+    <h1>
+      Welcome
+    </h1>
+  </body>
 </html>
