--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <title>Title</title>
   </head>
   <body>
-    <h1>
-      Welcome
-    </h1>
+    <h1>Welcome</h1>
+    <figure>
+      <figcaption>Listen to the T-Rex:</figcaption>
+      <audio
+        controls
+        src="anime-ost_tokyo-ghoul-opening-01-unravel-by-tk-from-ling-tosite-sigure.mp3"
+      >
+        <a
+          href="anime-ost_tokyo-ghoul-opening-01-unravel-by-tk-from-ling-tosite-sigure.mp3"
+        >
+          Download audio
+        </a>
+      </audio>
+    </figure>
+    <div></div>
   </body>
 </html>
