--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Title</title>
   </head>
   <body>
-    <h1>Welcome</h1>
+    <h1>Welcome To Project</h1>
     <figure>
       <figcaption>Listen to the T-Rex:</figcaption>
       <audio
